--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Oxygen&display=swap');
+
+body
+{
+  font-family: 'Oxygen', sans-serif;
+}
