--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: 'Oxygen';
+  font-style: normal;
+  font-weight: 400;
+  src: url('https://fonts.googleapis.com/css2?family=Oxygen&display=swap');;
 }
 
+body {
+  font-family: 'Oxygen', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #ede7e3;
+  margin: 3vw;
+}
+
+.main_heading{
+  font-family: 'Oxygen', sans-serif;
+  position: relative;
+  text-align: left;
+  top: 30vh;
+  font-size: 15vh;
+  height: 15vh;
+  border: 5px solid #1d04ff;
+}
+
+.main_text{
+  font-family: 'Oxygen', sans-serif;
+  position: absolute;
+  top: 17.5vh;
+  text-align: left;
+  font-size: 3vh;
+  width: 75vw;
+  padding-top: 1vh;
+  padding-bottom: 1vh;
+  border: 5px solid #ff6804;
+
+}
+
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
