--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,12 @@ body {
   margin-top: 10vh;
 }
 
+.descriptionBox{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
