--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,11 @@ body {
   margin-left: 3vw;
 }
 
+.upload_submitbutton_mobile{
+  justify-content: center;
+  align-items: center;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
