Added contents for summary, flash cards and original submission

--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -72,6 +72,10 @@ body {
   margin-left: 3vw;
 }
 
+.content_box{
+  display: flex;
+  flex-wrap: wrap;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
