added tasks integration

--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -39,7 +39,7 @@ body {
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
+  text-align: left;
 }
 
 .wrapperButtonRow{
