Updated My Contents Quick View
Redesigned UI

--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -77,6 +77,10 @@ body {
   flex-wrap: wrap;
 }
 
+.text{
+  font-family: "Oxygen";
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
